--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
+    "@jest-mock/express": "^2.0.1",
+    "jest-mock-express": "^0.1.1",
     "@babel/cli": "^7.21.5",
     "@babel/core": "^7.21.5",
     "@babel/node": "^7.20.7",
